--- a/Backend/Cloud/UserManagement/package.json
+++ b/Backend/Cloud/UserManagement/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "firebase": "^10.5.2"
+    "firebase": "^10.5.2",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
