--- a/Backend/docker-compose.debug.yml
+++ b/Backend/docker-compose.debug.yml
@@ -1,14 +1,40 @@
 version: '3.4'
 
 services:
-  gateway:
+  cloud-gateway:
     image: gateway
     build:
       context: Cloud/Gateway
       dockerfile: ./Dockerfile
     environment:
-      NODE_ENV: development
+      NODE_ENV: production
     ports:
       - 4000:4000
-      - 9229:9229
-    command: ["node", "--inspect=0.0.0.0:9229", "index.js"]
+    env_file:
+      - Cloud/Gateway/gateway.env
+
+  user-management:
+    image: usermanagement
+    build:
+      context: Cloud/UserManagement
+      dockerfile: ./Dockerfile
+    environment:
+      NODE_ENV: production
+    ports:
+    - 3000:3000
+    env_file:
+    - Cloud/UserManagement/user-management.env
+
+  notification: 
+    image: notification
+    build: 
+      context: Cloud/Notification
+      dockerfile: ./Dockerfile
+    environment:
+      - NODE_ENV: production
+    ports:
+      - 3001:3001
+    env_file:
+      - Cloud/Notification/notifcation.env
+
+      
