--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -12,6 +12,9 @@ services:
       - 4000:4000
     env_file:
       - Cloud/Gateway/gateway.env
+    depends_on:
+      - user-management
+      - notification
 
   user-management:
     image: usermanagement
@@ -21,9 +24,9 @@ services:
     environment:
       NODE_ENV: production
     ports:
-    - 3000:3000
+      - 3000:3000
     env_file:
-    - Cloud/UserManagement/user-management.env
+      - Cloud/UserManagement/user-management.env
 
   notification:
     image: notification
@@ -33,6 +36,6 @@ services:
     environment:
       NODE_ENV: production
     ports:
-    - 3001:3001
+      - 3001:3001
     env_file:
-    - Cloud/Notification/notification.env     
+      - Cloud/Notification/notification.env     
