--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -38,4 +38,17 @@ services:
     ports:
       - 3001:3001
     env_file:
-      - Cloud/Notification/notification.env     
+      - Cloud/Notification/notification.env
+  
+  cloud-device-management:
+    image: devicemanagement
+    build: 
+      context: Cloud/devicemanagement
+      dockerfile: ./Dockerfile
+    environment:
+      NODE_ENV: production
+    ports:
+      - 3002:3002
+    env_file:
+      - Cloud/DeviceManagement/device-management.env
+    
