--- a/Backend/Edge/Persistence/package.json
+++ b/Backend/Edge/Persistence/package.json
@@ -13,12 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@influxdata/influxdb-client": "^1.33.2",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mqtt": "^5.3.0",
-    "@influxdata/influxdb-client": "^1.33.2"
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
