--- a/Backend/Edge/Analytics/package.json
+++ b/Backend/Edge/Analytics/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.1",
-    "mqtt": "^5.3.0"
+    "mqtt": "^5.3.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
