--- a/Backend/Edge/DeviceManagement/package.json
+++ b/Backend/Edge/DeviceManagement/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node-cron": "^3.0.3",
+    "mqtt": "^5.3.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
