--- a/Backend/Cloud/SensorData/package.json
+++ b/Backend/Cloud/SensorData/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
+    "axios": "^1.6.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
